apps/public/vault.rohrbom.be/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: svc-vaultwarden
  labels:
    gitops: flux
