apps/public/vault.rohrbom.be/admin-deny-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-admin-deny
  namespace: svc-vaultwarden
spec:
  selector:
    app: vaultwarden-admin-deny
  ports:
    - name: http
      port: 80
      targetPort: 8080
