apps/public/vault.rohrbom.be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: svc-vaultwarden
spec:
  type: ClusterIP
  selector: { app: vaultwarden }
  ports:
    - { name: http, port: 80, targetPort: http }
